WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70035
feColorMatrix doesn't use the correct default "matrix" type when no type attribute is specified
https://bugs.webkit.org/show_bug.cgi?id=70035
Summary
feColorMatrix doesn't use the correct default "matrix" type when no type attr...
Tim Horton
Reported
2011-10-13 09:56:37 PDT
From the SVG1.1SE spec: "If attribute ‘type’ is not specified, then the effect is as if a value of matrix were specified." This isn't the case in WebKit at the moment. Repro attached.
Attachments
repro: the images should be identical
(858 bytes, image/svg+xml)
2011-10-13 10:00 PDT
,
Tim Horton
no flags
Details
super simple patch
(6.78 KB, patch)
2011-10-21 15:07 PDT
,
Tim Horton
zimmermann
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2011-10-13 09:57:20 PDT
<
rdar://problem/10280177
>
Tim Horton
Comment 2
2011-10-13 10:00:01 PDT
Created
attachment 110862
[details]
repro: the images should be identical
Tim Horton
Comment 3
2011-10-13 10:03:40 PDT
*should be identical and both red, I should have specified*
Tim Horton
Comment 4
2011-10-21 15:07:11 PDT
Created
attachment 112029
[details]
super simple patch
WebKit Review Bot
Comment 5
2011-10-21 15:39:22 PDT
Comment on
attachment 112029
[details]
super simple patch
Attachment 112029
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/10197081
New failing tests: svg/filters/feColorMatrix-default-type.svg
Nikolas Zimmermann
Comment 6
2011-10-21 23:45:52 PDT
Comment on
attachment 112029
[details]
super simple patch r=me. Do you really want to put the png in svg/filters, instead of platform/mac/svg/filters, same for the .txt file. Please consider moving them before landing.
Tim Horton
Comment 7
2011-10-24 15:55:54 PDT
(In reply to
comment #6
)
> (From update of
attachment 112029
[details]
) > r=me. Do you really want to put the png in svg/filters, instead of platform/mac/svg/filters, same for the .txt file. Please consider moving them before landing.
Fixed, landed in 98293.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug