feColorMatrix doesn't use the correct default "matrix" type when no type attribute is specified https://bugs.webkit.org/show_bug.cgi?id=70035 <rdar://problem/10280177>

Reviewed by Nikolas Zimmermann.

Make feColorMatrix's type attribute be "matrix" by default.

Test: svg/filters/feColorMatrix-default-type.svg

* svg/SVGFEColorMatrixElement.cpp:
(WebCore::SVGFEColorMatrixElement::SVGFEColorMatrixElement):


Canonical link: https://commits.webkit.org/86959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98293 268f45cc-cd09-0410-ab3c-d52691b4dbfc